web/saito/css-imports/saito-chat.css
/* ... */
.chat-message-line {
  position: relative;
  padding: 0.25rem;
  word-wrap: anywhere;
}

.saito-userline-reply {
  display: none;
}

.chat-body .saito-userline {
  width: unset !important;
  min-width: 10rem;
  max-width: 600px;
}

.chat-message-line .saito-userline-reply {
  display: flex;
  position: absolute;
  flex-direction: row;
  align-items: center;
  gap: 1rem;
  right: -5rem;
  bottom: 1; /* bumped it down a notch, and closer to the element */
  z-index: 9;
  background: var(--background-color-hover-chat-popup-message-tag);
  padding: 5px 7px 2px;
  border-radius: var(--border-radius-chat-popup-message-tag);
  border: var(--border-thickness-chat-popup-message-tag) solid var(--border-color-chat-popup-message-tag);
  font-size: 1.1rem; /* made this way smaller, but this way access immediately below the line works better */
  opacity: 0; /* Initial opacity set to 0 for invisibility */
  transition: opacity 0.3s ease-in-out; /* Transition effect on opacity */
  
}

.chat-message-line:hover .saito-userline-reply {
  opacity: 1; /* Opacity set to 1 on hover to make the element visible */
}

.liked {
  color: var(--color-primary);
}

.chat-likes {
     right: -4rem;
     bottom: 0;
     display: flex;
     width: 40px;
     font-size: 1.3rem;
}

.chat-likes i {
  color: var(--font-color-chat-popup-likes);
}

.chat-likes .chat-like-number {
  margin-left: .2rem;

}
.saito-user-self .chat-message-line:hover .saito-userline-reply{
  right: -2.5rem;

}

.saito-user-self .chat-message-line .saito-userline-reply .chat-copy, .saito-user-self .chat-message-line .saito-userline-reply .chat-reply, .saito-user-self .chat-message-line .saito-userline-reply .chat-like {
  display: none;
  cursor: pointer;
}

.saito-user .saito-userline-reply i:hover {
  color: var(--font-color-hover-chat-popup-reply);
}

.chat-footer {
  min-height: 4.5rem;
  height: fit-content;
  font-size: 2rem;
  /*position: absolute;
  bottom: 0;*/
  width: 100%;
  padding: 0;
  display: flex;
  flex-flow: row;
  align-items: end;
  z-index: 2;
  border-top: 1px solid var(--border-color-chat-popup);
  background: var(--background-color-main);  /* Can't use intended variable --background-color-button-chat-popup-send NOT SURE WHY*/
  position: relative;
}

.chat-container blockquote {
  color: inherit;
  line-height: 2.5rem;
  margin: 0.5rem 0;
}

.chat-input {
  border: 1px solid transparent;
  width: 100%;
  font-size: 1.6rem;
  padding: 1.2rem 3rem 1.2rem 1rem;
  outline: none;
  background: var(--background-color-chat-popup-input);
  max-height: 15rem;
  overflow-y: auto;
  word-break: break-word;
  height: 4.2rem;
}

.chat-footer .saito-emoji {
  padding: 1.3rem 0.5rem;
}

/* This is the submit paper airplane icon */

.chat-footer>i {
  color: var(--font-color-paper-airplane);
  cursor: pointer;
  z-index: 2;
  transition: all 0.2s;
  font-size: 2rem;
  padding: 1.3rem 1rem 1.3rem 0.5rem;
}

.chat-footer i:hover {
  transform: rotate(45deg);
}

.dockedLeft {
  border-left: 3px solid var(--border-color-chat-popup-docked) !important;
  border-top-left-radius: 0 !important;
  border-bottom-left-radius: 0 !important;
}

.dockedRight {
  border-right: 3px solid var(--border-color-chat-popup-docked) !important;
  border-top-right-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.dockedTop {
  border-top: 3px solid var(--border-color-chat-popup-docked) !important;
  border-top-left-radius: 0 !important;
  border-top-right-radius: 0 !important;
}

.dockedBottom {
  border-bottom: 3px solid var(--border-color-chat-popup-docked) !important;
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.remove_user {
  padding: 0.5rem;
}

.remove_user:hover {
  color: var(--font-color-chat-popup-remove-user);
}


.chat-main-container {
  background-color: var(--background-color-chat-module-main);
  background-image: url(/saito/img/tiled-logo.svg);
}

.chat-main-container .chat-body {
  background-color: unset;
  background-image: unset;
}

.chat-main-container .saito-sidebar.left {
  background-color: var(--background-color-chat-module-sidebar-left);
}

.saito-chat-button {
  cursor: pointer;
  width: fit-content;
  margin: auto;
  padding: 4px;
  color: var(--saito-font-color-light);
  font-style: italic;
  font-size: 1.4rem;
}

.saito-chat-button:hover {
  font-style: unset;
  color: var(--saito-font-color-heavy); /* testing */
} 

/* Mobile Overlay */

.close-chat-manager {
  margin-left: 1rem;
  margin-right: auto;
  display: none;
  position: relative;
  height: 100%;
}

.chat-manager-overlay .close-chat-manager {
  display: block;
}

.close-chat-manager i {
  position: absolute;
  left: 0;
  top: 0;
  padding: 1rem;
  background: var(--background-color-chat-popup-main); /* testing */
  font-size: 24px;
}

.chat-manager-overlay .chat-manager-header, .chat-manager-overlay .chat-manager-menu {
  font-size: 20px;
}

.chat-manager-overlay {
  background-color: var(--background-color-chat-popup-main); /* testing */
  position: absolute;
  left: 0;
  top: var(--saito-header-height);
  z-index: 15;
  width: 300px;
  height: fit-content;
}

.floating-cm-overlay .chat-manager-header {
  cursor: grab;
}

.alternate-close-button, .floating-cm-overlay .chat-manager-options, .chat-manager-overlay.floating-cm-overlay .close-chat-manager {
  display: none;
}

.floating-cm-overlay .alternate-close-button {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 30px;
}


.chat-manager-overlay.floating-cm-overlay .chat-manager {
  max-height: 400px;
}

.chat-manager-overlay.floating-cm-overlay .chat-manager-list {
  min-height: unset;
  max-height: unset;
}
/* ... */

